--- a/Tyuiu.MorozAD.Sprint7.ProjectV6/Tyuiu.MorozAD.Sprint7.ProjectV6.csproj
+++ b/Tyuiu.MorozAD.Sprint7.ProjectV6/Tyuiu.MorozAD.Sprint7.ProjectV6.csproj
@@ -52,6 +52,12 @@
     <Compile Include="FormAbout.Designer.cs">
       <DependentUpon>FormAbout.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormDoctor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormDoctor.Designer.cs">
+      <DependentUpon>FormDoctor.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormPatient.cs">
       <SubType>Form</SubType>
     </Compile>
